--- a/kontakt.html
+++ b/kontakt.html
@@ -62,15 +62,15 @@
       <main class="box kontakt-main-area">
         <h1 class="h1-contact">Contact Us</h1>
         <img src="./img/contact-us4-img.jpg"
-          class="kontakt-bild" style="width:75%"alt="Office phone">
+          class="kontakt-bild" style="width:75%" alt="Office phone">
 
       </main>
 
       <address class="box kontakt-article1">
-        <h2>Call us on</h2>
-        <h3>
+      <h2>Call on</h2>
+      <h3>
           <a href="tel:0763096591" class="contact-link">0763096591</a>
-        </h3>
+      </h3>
         <p>Mon - Fri 10.00-17.00</p>
       </address>
 
