--- a/kontakt.html
+++ b/kontakt.html
@@ -27,10 +27,10 @@
 
         <!-- Meny brett fönster -->
         <div class="navbar">
-          <a href="index.html">Home</a>
-          <a href="bilar.html">Cars on sale</a>
-          <a href="våra-bilmärken.html">Our car brands</a>
-          <a href="omoss.html">About us</a>
+          <a aria-label="Homepage" href="index.html">Home</a>
+          <a aria-label="Cars on sale" href="bilar.html">Cars on sale</a>
+          <a aria-label="Our car brands" href="våra-bilmärken.html">Our car brands</a>
+          <a aria-label="About us" href="omoss.html">About us</a>
           <a class="active" href="#">Contact</a>
         </div>
 
@@ -43,10 +43,10 @@
         <!-- Meny smalt fönster -->
         <div class="topnav">
           <div id="myLinks">
-            <a href="index.html">Home</a>
-            <a href="bilar.html">Cars on sale</a>
-            <a href="våra-bilmärken.html">Our car brands</a>
-            <a href="omoss.html">About us</a>
+            <a aria-label="Homepage" href="index.html">Home</a>
+            <a aria-label="Cars on sale" href="bilar.html">Cars on sale</a>
+            <a aria-label="Our car brands" href="våra-bilmärken.html">Our car brands</a>
+            <a aria-label="About us " href="omoss.html">About us</a>
             <a class="active1" href="#">Contakt</a>
             <a href="https://www.facebook.com" target="_blank"><img src="./img/facebook_logo.png" alt="facebook_logo" style="width:20px"></a>
             <a href="https://www.twitter.com" target="_blank"><img src="./img/twitter_logo.png" alt="twitter_logo" style="width:20px"></a>
