--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       <!-- Meny brett fönster -->
       <div class="navbar">
         <a class="active" href="#">Home</a> 
-        <a href="bilar.html">Cars on sale</a>
-        <a href="våra-bilmärken.html">Our car brands</a>
-        <a href="omoss.html">About us</a>
-        <a href="kontakt.html">Contact</a>
+        <a aira-label ="Cars on sale" href="bilar.html">Cars on sale</a>
+        <a aira-label ="Our car brands" href="våra-bilmärken.html">Our car brands</a>
+        <a aira-label ="About us" href="omoss.html">About us</a>
+        <a aira-label ="Contact" href="kontakt.html">Contact</a>
         
 
       </div>
@@ -43,10 +43,10 @@
   
         <div id="myLinks">
             <a class="active1" href="#">Home</a>
-            <a href="bilar.html">Cars on sale</a>
-            <a href="våra-bilmärken.html">Our car brands</a>
-            <a href="omoss.html">About us</a>
-            <a href="kontakt.html">Contact</a>
+            <a aria-label="Cars on sale" href="bilar.html">Cars on sale</a>
+            <a aria-label="Our car brands" href="våra-bilmärken.html">Our car brands</a>
+            <a aria-label="About us" href="omoss.html">About us</a>
+            <a aria-label="Contact" href="kontakt.html">Contact</a>
             <a href="https://www.facebook.com" target="_blank" ><img src="./img/facebook_logo.png" alt="facebook_logo" style="width:20px"></a>
             <a href="https://www.twitter.com" target="_blank"><img src="./img/twitter_logo.png" alt="twitter_logo" style="width:20px"></a>
             <a href="https://www.instagram.com" target="_blank"><img src="./img/instagram_logo.png" alt="instagram_logo" style="width:20px"></a>
