--- a/omoss.html
+++ b/omoss.html
@@ -29,11 +29,11 @@
 
       <!-- Meny brett fönster -->
       <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="bilar.html">Cars on sale</a>
-        <a href="våra-bilmärken.html"> Our car brands</a>
+        <a aria-label="Homepage" href="index.html">Home</a>
+        <a aria-label="Cars on sale" href="bilar.html">Cars on sale</a>
+        <a aria-label="Our car brands" href="våra-bilmärken.html"> Our car brands</a>
         <a class="active" href="#">About us</a> 
-        <a href="kontakt.html">Contact</a>
+        <a aria-label="Contact" href="kontakt.html">Contact</a>
         
 
       </div>
@@ -42,11 +42,11 @@
       <div class="topnav">
   
         <div id="myLinks">
-            <a href="index.html">Home</a>
-            <a href="bilar.html">Cars on sale</a>
-            <a href="våra-bilmärken.html">Our car brands</a>
+            <a aria-label="Homepage" href="index.html">Home</a>
+            <a aria-label="Cars on sale" href="bilar.html">Cars on sale</a>
+            <a aria-label="Our car brands" href="våra-bilmärken.html">Our car brands</a>
             <a class="active1" href="omoss.html">About us</a>
-            <a href="kontakt.html">Contact</a>
+            <a aria-label="Contact us " href="kontakt.html">Contact</a>
             <a href="https://www.facebook.com" target="_blank" ><img src="./img/facebook_logo.png" alt="facebook_logo" style="width:20px"></a>
             <a href="https://www.twitter.com" target="_blank"><img src="./img/twitter_logo.png" alt="twitter_logo" style="width:20px"></a>
             <a href="https://www.instagram.com" target="_blank"><img src="./img/instagram_logo.png" alt="instagram_logo" style="width:20px"></a>
