--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="navbar">
         <a class="active" href="#">Home</a> 
         <a aira-label ="Cars on sale" href="bilar.html">Cars on sale</a>
-        <a aira-label ="Our car brands" href="våra-bilmärken.html">Our car brands</a>
+        <a aira-label ="Our car brands" href="vara-bilmarken.html">Our car brands</a>
         <a aira-label ="About us" href="omoss.html">About us</a>
         <a aira-label ="Contact" href="kontakt.html">Contact</a>
         
@@ -45,7 +45,7 @@
         <div id="myLinks">
             <a class="active1" href="#">Home</a>
             <a aria-label="Cars on sale" href="bilar.html">Cars on sale</a>
-            <a aria-label="Our car brands" href="våra-bilmärken.html">Our car brands</a>
+            <a aria-label="Our car brands" href="vara-bilmarken.html">Our car brands</a>
             <a aria-label="About us" href="omoss.html">About us</a>
             <a aria-label="Contact" href="kontakt.html">Contact</a>
             <a href="https://www.facebook.com" target="_blank" ><img src="./img/facebook_logo.png" alt="facebook_logo" style="width:20px"></a>
