--- a/omoss.html
+++ b/omoss.html
@@ -31,7 +31,7 @@
       <div class="navbar">
         <a aria-label="Homepage" href="index.html">Home</a>
         <a aria-label="Cars on sale" href="bilar.html">Cars on sale</a>
-        <a aria-label="Our car brands" href="våra-bilmärken.html"> Our car brands</a>
+        <a aria-label="Our car brands" href="vara-bilmarken.html"> Our car brands</a>
         <a class="active" href="#">About us</a> 
         <a aria-label="Contact" href="kontakt.html">Contact</a>
         
@@ -44,7 +44,7 @@
         <div id="myLinks">
             <a aria-label="Homepage" href="index.html">Home</a>
             <a aria-label="Cars on sale" href="bilar.html">Cars on sale</a>
-            <a aria-label="Our car brands" href="våra-bilmärken.html">Our car brands</a>
+            <a aria-label="Our car brands" href="vara-bilmarken.html">Our car brands</a>
             <a class="active1" href="omoss.html">About us</a>
             <a aria-label="Contact us " href="kontakt.html">Contact</a>
             <a href="https://www.facebook.com" target="_blank" ><img src="./img/facebook_logo.png" alt="facebook_logo" style="width:20px"></a>
