--- a/kontakt.html
+++ b/kontakt.html
@@ -29,7 +29,7 @@
         <div class="navbar">
           <a aria-label="Homepage" href="index.html">Home</a>
           <a aria-label="Cars on sale" href="bilar.html">Cars on sale</a>
-          <a aria-label="Our car brands" href="våra-bilmärken.html">Our car brands</a>
+          <a aria-label="Our car brands" href="vara-bilmarken.html">Our car brands</a>
           <a aria-label="About us" href="omoss.html">About us</a>
           <a class="active" href="#">Contact</a>
         </div>
@@ -45,7 +45,7 @@
           <div id="myLinks">
             <a aria-label="Homepage" href="index.html">Home</a>
             <a aria-label="Cars on sale" href="bilar.html">Cars on sale</a>
-            <a aria-label="Our car brands" href="våra-bilmärken.html">Our car brands</a>
+            <a aria-label="Our car brands" href="vara-bilmarken.html">Our car brands</a>
             <a aria-label="About us " href="omoss.html">About us</a>
             <a class="active1" href="#">Contakt</a>
             <a href="https://www.facebook.com" target="_blank"><img src="./img/facebook_logo.png" alt="facebook_logo" style="width:20px"></a>
