--- a/vara-bilmarken.html
+++ b/vara-bilmarken.html
@@ -66,19 +66,19 @@
           </div>
           <div class="brands-wrapper">
             <h5>Mercedez</h5>
-            <img src="img/4.png" alt="IMAGE">
+            <img src="./img/2.png" alt="IMAGE">
           </div>
           <div class="brands-wrapper">
             <h5>Mazda</h5>
-            <img src="img/2.png" alt="IMAGE">
+            <img src="./img/3.png" alt="IMAGE">
           </div>
           <div class="brands-wrapper">
             <h5>Hyundai</h5>
-            <img src="img/3.png" alt="IMAGE">
+            <img src="./img/4.png" alt="IMAGE">
           </div>
           <div class="brands-wrapper">
             <h5>Ford</h5>
-            <img src="img/5.png" alt="IMAGE">
+            <img src="./img/5.png" alt="IMAGE">
           </div>
         </div>
 
