--- a/vara-bilmarken.html
+++ b/vara-bilmarken.html
@@ -61,23 +61,23 @@
 
         <div class="brands-logo">
           <div class="brands-wrapper">
-            <h5>BMW</h5>
+            <p class="car-logotext">BMW</p>
             <img src="img/1.png" alt="IMAGE">
           </div>
           <div class="brands-wrapper">
-            <h5>Mercedez</h5>
+            <p class="car-logotext">Mercedez</p>
             <img src="./img/2.png" alt="IMAGE">
           </div>
           <div class="brands-wrapper">
-            <h5>Mazda</h5>
+            <p class="car-logotext">Mazda</p>
             <img src="./img/3.png" alt="IMAGE">
           </div>
           <div class="brands-wrapper">
-            <h5>Hyundai</h5>
+            <p class="car-logotext">Hyundai</p>
             <img src="./img/4.png" alt="IMAGE">
           </div>
           <div class="brands-wrapper">
-            <h5>Ford</h5>
+            <p class="car-logotext">Ford</p>
             <img src="./img/5.png" alt="IMAGE">
           </div>
         </div>
