--- a/vara-bilmarken.html
+++ b/vara-bilmarken.html
@@ -24,11 +24,11 @@
 
             <!-- Meny brett fösnter -->
             <div class="navbar">
-              <a href="index.html">Home</a>
-              <a href="bilar.html">Cars on sale</a>
+              <a aria-label="Home" href="index.html">Home</a>
+              <a aria-label="Cars on sale" href="bilar.html">Cars on sale</a>
               <a class="active" href="#">Our car brands</a>
-              <a href="omoss.html">About us</a>
-              <a href="kontakt.html">Contact</a>
+              <a aria-label="About us" href="omoss.html">About us</a>
+              <a aria-label="Contact" href="kontakt.html">Contact</a>
             </div>
 
             <div class="socialmedia">
@@ -41,11 +41,11 @@
             <div class="topnav">
 
               <div id="myLinks">
-                  <a href="index.html">Home</a>
-                 <a href="bilar.html">Cars on sale</a>
+                  <a aria-label="Home" href="index.html">Home</a>
+                 <a aria-label="Cars on sale" href="bilar.html">Cars on sale</a>
                   <a class="active1" href="#">Our car brands</a>
-                  <a href="omoss.html">About us</a>
-                  <a href="kontakt.html">Contact</a>
+                  <a aria-label="About us" href="omoss.html">About us</a>
+                  <a aria-label="Contact" href="kontakt.html">Contact</a>
                   <a href="https://www.facebook.com" target="_blank" ><img src="./img/facebook_logo.png" alt="facebook_logo" style="width:20px"></a>
                   <a href="https://www.twitter.com" target="_blank"><img src="./img/twitter_logo.png" alt="twitter_logo" style="width:20px"></a>
                   <a href="https://www.instagram.com" target="_blank"><img src="./img/instagram_logo.png" alt="instagram_logo" style="width:20px"></a>
