--- a/kontakt.html
+++ b/kontakt.html
@@ -67,7 +67,7 @@
       </main>
 
       <address class="box kontakt-article1">
-        <h2>Call on</h2>
+        <p>Call on</p>
         <h3>
           <a href="tel:0763096591" class="contact-link">0763096591</a>
         </h3>
@@ -75,7 +75,7 @@
       </address>
 
       <address class="box kontakt-article2">
-        <h2>E-mail us on </h2>
+        <p>E-mail us on </p>
         <h3>
           <a href="mailto:GorillaAuto@gmail.com" class="contact-link">GorillaAuto@gmail.com</a>
         </h3>
